redpanda/redpanda-console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redpanda-console-ingress
  namespace: redpanda
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: redpanda.lakehouse.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redpanda-console
            port:
              number: 8080
